test/visibility/import/unqualified-access-no-bleed2.good
unqualified-access-no-bleed2.chpl:10: In function 'main':
unqualified-access-no-bleed2.chpl:11: error: unresolved call 'foo()'
unqualified-access-no-bleed2.chpl:11: note: because no functions named foo found in scope
